# volesti

./: .codecov.yml  .gitignore  .readthedocs.yaml  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESCRIPTION  NAMESPACE  NEWS.md  README  README (Case Conflict (1)).md  README (Case Conflict).md  README.md  SDPAFormatManager.h
examples/: .gitignore  Boost.cmake  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  CodeCoverage.cmake  DartConfiguration.tcl  LPSolve.cmake  Makefile  birk3.ine  boundary_test.cpp  cmake_install.cmake  mink_sum_vol.cpp  opt  opt.cpp  sample_simplex_main.cpp  vol.cpp
examples/Autopoint/: CMakeLists.txt  Gaussian_mixture_autopoint  Gaussian_mixture_autopoint.cpp  Logistic_regression_autopoint  Logistic_regression_autopoint.cpp  MultidimensionalGaussian_mixture_autopoint  MultidimensionalGaussian_mixture_autopoint.cpp  README.md  bankNote.txt  generate_gaussian_mixture_data.py  generate_multidimensional_gaussian_mixture_data.py  readData.cpp  userDefinedFunction_autopoint  userDefinedFunction_autopoint.cpp  userDefinedFunction_manual_gradient  userDefinedFunction_manual_gradient.cpp
examples/EnvelopeProblemSOS/: CMakeLists.txt  EnvelopeProblemSOS.h  EnvelopeProblemSOS.hpp  EnvelopeProblemSOS.tpp  sos.cpp
examples/LinearProgramming/: InteriorPointMethod.cpp  InteriorPointMethod.h  NewtonsMethod.cpp  input.txt  main.cpp  output.txt
examples/autodiff_library/: CMakeLists.txt  Gaussian_mixture_Autodiff_backward.cpp  Gaussian_mixture_Autodiff_forward.cpp  Gaussian_mixture_Stanmath.cpp  Logistic_regression_Autodiff_backward.cpp  Logistic_regression_Autodiff_forward.cpp  Logistic_regression_stanmath.cpp  MultidimensionalGaussian_mixture_Autodiff_backward.cpp  MultidimensionalGaussian_mixture_Autodiff_forward.cpp  MultidimensionalGaussian_mixture_stanmath.cpp  README.md  generate_multidimensional_gaussian_mixture_data.py  plot_hmc.py  readData.cpp  userDefinedFunction_Autodiff_backward.cpp  userDefinedFunction_Autodiff_forward.cpp  userDefinedFunction_Stanmath.cpp  userDefinedFunction_manual_gradient.cpp
examples/autopoint/: CMakeLists.txt  Gaussian_mixture_autopoint.cpp  MultidimensionalGaussian_mixture_autopoint.cpp  README.md  generate_multidimensional_gaussian_mixture_data.py  readData.cpp  readData.h  test1.txt  userDefinedFunction_autopoint.cpp  userDefinedFunction_manual_gradient.cpp
examples/correlation_matrices/: CMakeLists.txt  CorreSpectra.cpp  HMC.cpp  Point_matrix.cpp  README.md  RandomPointGenerator.cpp  TODO  auxiliaries.h  brouillon.cpp  direct_sampler.hpp  old_sampler.cpp  plot.py  sample_correlation_matrices.hpp  sampler  sampler.cpp  sampling.txt  test.cpp  test.hpp  test.sh  uniform_correlation_matrices (copy).hpp  uniform_correlation_matrices.hpp  uniform_sampling.txt  uniform_sampling2.txt
examples/count-linear-extensions-using-hpolytope/: CMakeLists.txt  README.md  volesti_lecount.cpp
examples/count-linear-extensions-using-order-polytope/: CMakeLists.txt  README.md  volesti_lecount_order_polytope.cpp
examples/crhmc_cooling_gaussians/: CMakeLists.txt  volume_example.cpp
examples/crhmc_cooling_nonspherical_gaussians/: CMakeLists.txt  volume_example.cpp
examples/crhmc_prepare/: .gitignore  CMakeLists.txt  README.md  coli_crhmc_polytope.txt  crhmc_prepare  crhmc_prepare.cpp
examples/crhmc_sampling/: .gitignore  CMakeLists.txt  CRHMC_SIMD_1_degen2.txt  CRHMC_SIMD_4_degen2.txt  README.md  common.hpp  crhmc_sample_sparse.cpp  crhmc_sampling.cpp  dirichlet_sampling.cpp  execute_benchmark.sh  helper_functions.hpp  plot_crhmc.py  plot_hmc.py  samples.txt  samples.txtx  sampling_functions.cpp  simple_crhmc.cpp
examples/ellipsoid-sampling/: CMakeLists.txt  README.md  ellipsoid2d-sampling.cpp  plot_pts.py
examples/hpolytope-volume/: CMakeLists.txt  README.md  hpolytopeVolume.cpp
examples/linear_extensions/: simple.txt
examples/logconcave/: CMakeLists.txt  README.md  exponential_exact_hmc.cpp  gaussian_exact_hmc.cpp  high_dimensional_hmc.cpp  high_dimensional_hmc_rand_poly.cpp  metabolic.r  plot_hmc.py  requirements.txt  simple_hmc.cpp  simple_hmc.r  simple_ode.cpp  simple_ode.r  simple_sde.cpp  simple_uld.cpp
examples/mmcs_method/: CMakeLists.txt  Eigen.cmake  parallel.cpp  random_hpoly_10_dim_parallel.cpp  random_hpoly_50_dim.cpp  simple.cpp  skinny_cube_10_dim.cpp
examples/multithread_sampling/: CMakeLists.txt  sampling_multithread_walks  sampling_multithread_walks.cpp
examples/old_correlation/: CMakeLists.txt  sampler  sampler.cpp
examples/optimization_spectrahedra/: CMakeLists.txt  boltzmann_hmc_walk.cpp  solve_sdp.cpp
examples/order-polytope-basics/: CMakeLists.txt  README.md  order_polytope.cpp  poset_data.txt
examples/polytope_examples/: birk13.ine  cross_16.ine  cube10.ine  prod_simplex_40_40.ine  simplex50.ine  simplex90.ine
examples/polytope_generators/: birk.cpp  cross.cpp  cube.cpp  prod_simplex.cpp  rh_d_m.cpp  rrh_d_m.cpp  simplex.cpp  skinny_cube.cpp
examples/python_utilities/: plot_ode.py  plot_samples.py
examples/sample_points/: CMakeLists.txt  simple_example.cpp
examples/sampling-hpolytope-with-billiard-walks/: .gitignore  CMakeLists.txt  README.md  plot.py  sampler.cpp
examples/spectrahedra/: CMakeLists.txt  Eigen.cmake  README.md  boltzmannHmcWalk.cpp  (+5 more)
test/: Boost.cmake  CMakeCache.txt  CMakeLists.txt  CMakeLists2.txt  CMakeLists_2.txt  CTestTestfile.cmake  Eigen.cmake  LP_Solve.cmake  LpSolve.cmake  Makefile  VpolyCG_test.cpp  VpolyCV_test.cpp  VpolyVol_test.cpp  ZonotopeVolCG_test.cpp  ZonotopeVolCV_test.cpp  ZonotopeVol_test.cpp  ballintersectpolytope.h  benchmark_crhmc.cpp  benchmark_crhmc_sampling.cpp  benchmarks_cb.cpp  benchmarks_cg.cpp  benchmarks_crhmc.cpp  benchmarks_crhmc_sampling.cpp  benchmarks_crhmc_sampling4.cpp  benchmarks_sob.cpp  boundary_oracles_test.cpp  cartesian_kernel.h  cheb_test  chebychev_test.cpp  cmake_install.cmake  comp_vol.h  compile_commands.json  cooling_bodies_bill_test.cpp  crhmc_polytope_preparation_test.cpp  crhmc_polytope_test_output.txt  crhmc_sampling_test.cpp  cube_10.ine  cube_100.ine  cube_150.ine  cube_20.ine  (+80 more)
(+2838 files in other folders)
